migrate to play2.4

--- a/app/views/editForm.scala.html
+++ b/app/views/editForm.scala.html
@@ -1,4 +1,4 @@
-@(id: Long, employeeForm: Form[Employee])
+@(id: Long, employeeForm: Form[Employee])(implicit messages: Messages)
 
 @import helper._
 
