--- a/app/views/list.scala.html
+++ b/app/views/list.scala.html
@@ -1,4 +1,4 @@
-@(currentPage: Page[Employee], currentOrderBy: Int, currentFilter: String)(implicit flash: play.api.mvc.Flash)
+@(currentPage: Page[Employee], currentOrderBy: Int, currentFilter: String)(implicit flash: play.api.mvc.Flash, messages: Messages)
 
 @**************************************** 
 * Helper generating navigation links * 
